--- a/customCSS.css
+++ b/customCSS.css
@@ -51,7 +51,7 @@ header{ position:relative;
 }
 
 body{
-    background-image: url(http://silviahartmann.com/background-tile-art/images/black_woven_seamless_tile.jpg);
+    background-image: url(images/black_woven_seamless_tile.jpg);
     margin:auto;
     padding:3px;
     font-family:fantasy;
