I forgot what I did..

--- a/customCSS.css
+++ b/customCSS.css
@@ -10,7 +10,7 @@ a:active {color:#0000FF;}  /* selected link */
 
 @font-face {
   font-family: "Trebuchet";
-  src: url(“fonts/Trebuchet MS.ttf") format("truetype");
+  src: url("fonts/Trebuchet MS.ttf") format("truetype");
 }
 
 @font-face {
