--- a/customCSS.css
+++ b/customCSS.css
@@ -82,6 +82,7 @@ body{
     background: black;
     height: auto;
     width: 75%;
+    max-width: 600pt;
     padding:10px;
     margin:10px;    
     margin-left: auto;
