--- a/Katie's_Kitchen/KKitchen.css
+++ b/Katie's_Kitchen/KKitchen.css
@@ -8,6 +8,21 @@ a:visited {color:#00FF00;}  /* visited link */
 a:hover {color:#FF00FF;}  /* mouse over link */
 a:active {color:#0000FF;}  /* selected link */
 
+
+header{ position:relative;
+        top:10px;
+        background:#343434;
+        height: auto;
+        width: 75%;
+        padding:10px;
+        margin:10px;    
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        border: solid peru;
+}
+
+
 body {	
 	font-family: 'PT Serif Caption', serif;
 	font-size:14px;
