--- a/Katie's_Kitchen/KKitchen.css
+++ b/Katie's_Kitchen/KKitchen.css
@@ -99,3 +99,13 @@ h6 {
 	padding:0 0 19px 0;
 	font-weight:bold;
 }
+
+#product{
+    vertical-align: middle;
+    width: 500px;
+    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    background-color: black;
+}
