--- a/Katie's_Kitchen/KKitchen.css
+++ b/Katie's_Kitchen/KKitchen.css
@@ -107,5 +107,5 @@ h6 {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    background-color: black;
+    background-color: #f9ab70;
 }
