--- a/Katie's_Kitchen/KKitchen.css
+++ b/Katie's_Kitchen/KKitchen.css
@@ -11,7 +11,7 @@ a:active {color:#000066;}  /* selected link */
 
 header{ position:relative;
         top:10px;
-        background:#343434;
+        background:#e6e4d7;
         height: auto;
         width: 75%;
         padding:10px;
