--- a/Katie's_Kitchen/KKitchen.css
+++ b/Katie's_Kitchen/KKitchen.css
@@ -30,11 +30,11 @@ body {
 	color:#343434;
 	min-width:1020px;
 	background:url(KKimages/bg-body.gif) #e6e4d7;
-	text-transform:uppercase
+	//text-transform:uppercase
 }
 
 p {
-	padding-bottom:18px;
+	padding-bottom:10px;
 }
 
 
@@ -44,7 +44,8 @@ a {
 }
 
 h1 {
-	float:left;
+	float:center;
+        font-size:55px;
 	display:block;
 	position:relative;
 	z-index:10;
@@ -62,7 +63,7 @@ color:#343434}
 h3 {	
 	font-size:35px;
 	line-height:38px;	
-	padding:33px 0 18px;
+	padding:15px 0 8px;
 	text-shadow:0 1px 2px #c5c2a9;	
 }
 
