--- a/Katie's_Kitchen/KKitchen.css
+++ b/Katie's_Kitchen/KKitchen.css
@@ -35,6 +35,8 @@ body {
 
 p {
    padding-bottom:10px;
+   padding-left: 5px;
+   padding-right: 5px;
 }
 
 
@@ -50,6 +52,7 @@ h1 {
    display:block;
    position:relative;
    z-index:10;
+   text-transform:uppercase
 }
 
 h1 a {
@@ -74,11 +77,12 @@ h3 span {color:#D53827;
 
 h3 strong{font-weight:normal;color:#d53827}	
 
-h3 em{color:#999;
-      font-size:20px;
-      line-height:24px;
-      display:block;
-      font-style:normal}	
+h3 em{
+   color:#999;
+   font-size:20px;
+   line-height:24px;
+   display:block;
+   font-style:normal}	
 
 h4 {
    font-size:20px;
