--- a/Katie's_Kitchen/KKitchen.css
+++ b/Katie's_Kitchen/KKitchen.css
@@ -117,6 +117,7 @@ h6 {
 }
 
 .katieProfile {
+   vertical-align: middle;
     margin-left: auto;
     margin-right: auto;
     border: 5px solid #f99245;
