--- a/Katie's_Kitchen/KKitchen.css
+++ b/Katie's_Kitchen/KKitchen.css
@@ -118,6 +118,7 @@ h6 {
 
 .katieProfile {
    vertical-align: middle;
+   width: 400px;
    margin-left: auto;
    margin-right: auto;
    border: 5px solid #f99245;
