--- a/Katie's_Kitchen/KKitchen.css
+++ b/Katie's_Kitchen/KKitchen.css
@@ -119,7 +119,9 @@ h6 {
 .katieProfile {
    vertical-align: middle;
    width: 400px;
+   margin: 10px;
    margin-left: auto;
    margin-right: auto;
+   text-align: center;
    border: 5px solid #f99245;
 }
